code quality & stability fixes